# Charm

./: .env.production  .env.web  .eslintignore  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PRIVACY.md  README.md  SECURITY.md  SENTRY.md  SENTRY_OPERATIONAL_CHECKLIST.md  components.json  index.html  knip.json  knope.toml  observability-ratchet.json  oxfmt.config.ts  oxlint.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.changeset/: bookmarks-saved-messages.md  confirm-message-redaction.md  filter-room-lists-by-unread.md  fix-can-redact-n-plus-one.md  link-previews-web.md  media-drop-target.md  media-send-polish.md  message-action-parity-remaining-slices.md  message-permalink.md  message-pinning.md  parallelize-room-snapshot.md  presence-receipt-privacy-controls.md  resend-discard-failed-message.md  room-alias-web.md  room-list-message-preview.md  room-list-sort-and-typing.md  show-ambient-unread-counts.md  sidebar-space-management.md  spec63-power-level-gating.md
.claude/: settings.json
.claude/hooks/: check-pr-base.py  guard-symlinked-node-modules.py  guard-worktree-graphify-update.py  lint-on-edit.py  nudge-feature-flag.py  nudge-graphify.py  nudge-observability-coverage.py
.design-sync/: NOTES.md  config.json  conventions.md  ds-entry.ts  gen-types.mjs  tsconfig.ds-types.json
.design-sync/overrides/: css-fallback.mjs
.design-sync/tokens/: design-tokens.json
.do/: app.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/scripts/: configure-sentry-release-env.sh  enrich-changelog.mjs  report-artifact-sizes.mjs
.github/workflows/: codeql.yml  codex-review-gate.yml  debug-linux-tauri-hang.yml  debug-old-linux-job.yml  debug-ubuntu-2204-fallback.yml  docs-deploy.yml  feature-docs-refresh.yml  nightly-dev.yml  nightly-platform-builds.yml  nightly-release.yml  nightly.yml  pr-checklist-gate.yml  prepare-release.yml  quality-checks.yml  release-builds.yml  release.yml  require-changeset.yml  require-main-base.yml  review-gate.yml  sentry-release-artifacts.yml  sentry-snapshots.yml  spec-13-webrtc-spike.yml  web-deploy-dev.yml  web-preview.yml  web-server-deploy.yml
.storybook/: main.ts  preview.tsx  test-runner.ts
crates/charm-web-server/: Cargo.toml  Dockerfile  README.md
crates/charm-web-server/src/: auth.rs  crypto_backup.rs  crypto_store.rs  events.rs  lib.rs  main.rs  media_cache.rs  observability.rs  persistence.rs  routes.rs  session.rs  sync_loop.rs
crates/charm-web-server/tests/: http_api.rs  isolation.rs
dev/synapse/: README.md  configure-homeserver.sh  configure-mas.sh  dex-config.yaml  docker-compose.yml  mas-config.yaml  register-test-user.sh
docs/: FEATURE_FLAGS.md  ci-tiers.md
docs-site/: .gitignore  AGENTS.md  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  reviewed-specs.json
docs-site/scripts/: check-content.mjs  check-site-graph.mjs  generate-roadmap.mjs  generate-site-graph-loader.mjs
docs-site/src/: content.config.ts
e2e/: appearance.spec.ts  composer.spec.ts  crash-recovery.spec.ts  feature-docs-current.spec.ts  feature-gallery.spec.ts  identity.spec.ts  live-web-e2ee.spec.ts  media-attachments.spec.ts  message-actions.spec.ts  onboarding.spec.ts  receipts-typing-presence.spec.ts  recovery.spec.ts  responsive-layout.spec.ts  room-info.spec.ts  room-invites.spec.ts  room-list-org.spec.ts  settings.spec.ts  snapshot-coverage.spec.ts  space-create-join.spec.ts  space-hierarchy.spec.ts  space-rail-management.spec.ts  timeline-scroll.spec.ts
e2e/support/: mockTauri.ts  sentrySnapshot.ts
functions/api/: [[path]].js
graphify-out/: GRAPH_REPORT.md  graph.json  manifest.json
public/: spike-webrtc.html
scripts/: check-observability-ratchet.mjs  compute-build-id.mjs  compute-build-id.test.mjs  install-git-hooks.sh  install-knope.js  install-launchd-agent.sh  merge-do-app-spec.py  social.cloudhub.charm.sync-main-graphify.plist  sync-feature-docs.mjs  sync-main-graphify.sh  tokens-pull.mjs
src/: App.test.tsx  App.tsx  main.tsx  providers.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.ci.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: feature_flags.rs  lib.rs  main.rs  observability_scrub.rs  observability_trace.rs
src-tauri/src/bindings/: BadgeState.ts  BookmarkEntry.ts  CommandResult.ts  CrossSigningStatusSummary.ts  DeviceSummary.ts  DiscoverHomeserverResponse.ts  DndSnapshot.ts  DndState.ts  EditHistoryEntry.ts  EmojiPair.ts  EventReceipt.ts  FeatureFlagCatalogEntry.ts  FeatureFlagKey.ts  HistoryVisibilityKind.ts  JoinRuleKind.ts  JoinedRoom.ts  JumpToEventResult.ts  LastMessagePreview.ts  LoginRequest.ts  LoginResponse.ts  MediaContent.ts  MembershipKind.ts  MessageContent.ts  NotificationSettingsSummary.ts  OwnProfile.ts  PinnedMessageSummary.ts  PowerLevelThresholds.ts  PresenceStateDto.ts  PresenceUpdate.ts  PrivacySettings.ts  ProfileSummary.ts  PushRegistration.ts  PushStatus.ts  PusherKind.ts  QrLoginProgressEvent.ts  ReactionDetail.ts  ReactionGroup.ts  ReactionToggleResult.ts  ReceiptTypeDto.ts  ReceiptUpdate.ts  (+29 more)
src-tauri/src/matrix/: account.rs  account_data.rs  actions.rs  auth.rs  bookmarks.rs  commands.rs  devices.rs  dnd.rs  ephemeral.rs  link_preview.rs  media.rs  members.rs  mod.rs  notifications.rs  persistence.rs  presence.rs  privacy_settings.rs  profiles.rs  qr_login.rs  room_admin.rs  rooms.rs  secret_store.rs  send.rs  shell.rs  spaces.rs  sync.rs  timeline.rs  verification.rs
src-tauri/src/push/: android.rs  ios.rs  mod.rs
src-tauri/tests/: account_and_devices.rs  alias_resolution.rs  bookmarks.rs  discovery_and_registration.rs  ephemeral.rs  message_actions.rs  own_profile.rs  persistence_isolation.rs  profile_identity.rs  qr_login.rs  room_admin.rs  room_org.rs  sso_login.rs  verification_flow.rs
src-tauri/tests/common/: mod.rs
src/featureFlags/: catalog.ts  (+10 more)
(+469 files in other folders)
