[package]
name = "charm"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "charm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
matrix-sdk = { version = "0.18.0", features = ["sqlite", "e2e-encryption", "sso-login", "qrcode"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time"] }
ts-rs = "12.0.1"
sentry = "0.48.3"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-single-instance = { version = "2.4.2", features = ["deep-link"] }
rand = "0.10.2"
futures-util = "0.3.32"
url = "2"
mime_guess = "2.0.5"
mime = "0.3.17"
sha2 = "0.11.0"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
eyeball = "0.8.8"
tauri-plugin-dialog = "2.7.1"
matrix-sdk-ui = "0.18.0"
lru = "0.12"
imbl = "6.1.0"
regex = "1"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[dev-dependencies]
matrix-sdk-test = "0.18.0"
# Enables `matrix_sdk::test_utils::mocks::MatrixMockServer`, used by the
# Timeline-mapping unit tests in `tests/timeline_mapping.rs` to build a real
# `matrix-sdk-ui` `Timeline` against a mocked homeserver (no live Synapse
# needed) instead of hand-fabricating `EventTimelineItem`s, which the crate
# doesn't expose a public constructor for.
matrix-sdk = { version = "0.18.0", features = ["testing"] }
# For tests/sso_login.rs: drives the real Synapse<->Dex OIDC redirect chain
# with a cookie jar, exactly like a browser would.
reqwest = { version = "0.13", features = ["cookies"] }
wiremock = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

