[package]
name = "charm"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "charm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
matrix-sdk = { version = "0.18.0", features = ["sqlite", "e2e-encryption", "sso-login", "qrcode"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time"] }
ts-rs = "12.0.1"
sentry = { version = "0.48.3", features = ["logs", "metrics", "tracing"] }
base64 = "0.22"
# Also present as a dev-dependency below (cookie-jar OIDC test flow); this is
# the runtime use — forwarding Sentry envelopes through the desktop CSP, see
# `forward_sentry_envelope` in src/lib.rs. Cargo unifies the two declarations'
# features across the build graph.
reqwest = "0.13"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-single-instance = { version = "2.4.2", features = ["deep-link"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
rand = "0.10.2"
futures-util = "0.3.32"
url = "2"
mime_guess = "2.0.5"
mime = "0.3.17"
sha2 = "0.11.0"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
eyeball = "0.8.8"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-store = "2"
matrix-sdk-ui = "0.18.0"
lru = "0.16"
# Direct dep so timeline.rs can pass matrix-sdk-ui's returned
# `imbl::Vector<Arc<TimelineItem>>` straight into our own functions — Cargo
# treats two semver-incompatible `imbl` versions as distinct types even with
# the same crate name, so stay on imbl 6.x until matrix-sdk-ui (currently
# pinned to `imbl = "6.1.0"` itself) moves past 6.x — don't jump to the
# latest imbl release independently. Bumping the major version breaks that
# type match (see PR #42); dependabot is configured to ignore major-version
# imbl bumps (.github/dependabot.yml) until matrix-sdk-ui moves.
imbl = "6.1.0"
regex = "1"
async-trait = "0.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
fs4 = { version = "1.1.0", features = ["sync"] }
tauri-plugin-log = "2"
log = "0.4.33"
tracing-appender = "0.2.5"


# `keyring`'s "apple-native" feature backs both macOS and iOS (same Keychain
# Services API on both) — one dependency declaration covers both targets;
# `secret_store.rs`'s `#[cfg(not(target_os = "android"))]` guard already
# assumed iOS had `keyring` available like every other non-Android target.
# (Independently fixed on `main` in #46 as well as here — same finding.)
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

# matrix-sdk's "sqlite" feature pulls in libsqlite3-sys, which by default
# looks for a system SQLite via pkg-config/vcpkg. macOS and Linux CI runners
# already have one; a GitHub Actions Windows runner does not (linking fails
# with "cannot open input file 'sqlite3.lib'"), the Android NDK sysroot
# doesn't ship one either (linking fails with "unable to find library
# -lsqlite3" — surfaced by Spec 11's CI run, the first to actually link
# charm_lib for Android), and the iOS simulator SDK's libsqlite3.tbd isn't
# wired into the generated Xcode project's link phase either (linking fails
# with "symbol(s) not found for architecture arm64" on rusqlite's sqlite3_*
# symbols — surfaced by the same Spec 11 CI run, the first to link charm_lib
# for iOS). "bundled" compiles SQLite from source instead, scoped to these
# three targets so the already-working macOS/Linux link path is untouched.
[target.'cfg(any(target_os = "windows", target_os = "android", target_os = "ios"))'.dependencies]
libsqlite3-sys = { version = "0.35", features = ["bundled"] }

[dev-dependencies]
matrix-sdk-test = "0.18.0"
# Provides `EventFactory`/room-builder fixtures used by the timeline-mapping
# unit tests in `src/matrix/timeline.rs`.
matrix-sdk = { version = "0.18.0", features = ["testing"] }
# For tests/sso_login.rs: drives the real Synapse<->Dex OIDC redirect chain
# with a cookie jar, exactly like a browser would.
reqwest = { version = "0.13", features = ["cookies"] }
wiremock = "0.6"
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
# Spec 13: WebKitGTK's `permission-request` signal has no default handler and
# no OS-level consent gate the way macOS/Windows/Android do — unhandled, it
# denies silently and getUserMedia never resolves for camera/mic. Tauri's own
# `PlatformWebview::inner()` already returns this exact `webkit2gtk::WebView`
# type, so this is a direct (not vendored/transitive-only) dependency to
# connect the signal ourselves in `lib.rs`. Version matches what tauri/wry
# already pin, so this doesn't add a second copy of the crate to the build.
webkit2gtk = "2.0.2"

[target.'cfg(target_os = "android")'.dependencies]
# reqwest's default native-tls backend pulls in openssl-sys, which can't find
# a system OpenSSL to link against when cross-compiling for Android (no
# pkg-config sysroot). "vendored" builds OpenSSL from source for the Android
# NDK target instead — scoped to Android only, doesn't touch the TLS backend
# used on any other platform. Surfaced by Spec 13's CI spike; needed for any
# Android build of this app, not just that spike.
openssl = { version = "0.10", features = ["vendored"] }
# `keyring` has no Android backend (there's no OS-level "secret service"/
# credential-manager API it wraps there — Android's equivalent is the
# Keystore system, reached via JNI, not a native Rust crate). These back
# `matrix::secret_store`'s Android implementation, which calls into a small
# Kotlin helper (`SecureStorage.kt`, bundled in `gen/android`) wrapping
# `androidx.security`'s `EncryptedSharedPreferences` — itself backed by an
# AES key generated and held in the Android Keystore, not a plaintext file.
jni = "0.21"
ndk-context = "0.1"
