[package]
name = "charm-web-server"
version = "0.1.0"
edition = "2021"
description = "Companion HTTP server exposing matrix-rust-sdk over the network for the Charm web client (Spec 16, sub-PR B: WebSocket event channel + encrypted-at-rest session persistence, on top of sub-PR A's HTTP router)."

# Deliberately not folded into src-tauri's own Cargo.toml: src-tauri's
# manifest/lockfile are already load-bearing for the existing Tauri/mobile
# build. A plain path dependency on `charm_lib` is enough to reuse
# `matrix/*.rs`'s business logic without touching that build. The two crates
# do share a `Cargo.lock` via the root workspace, though — see the root
# `Cargo.toml`'s doc comment for why that's safe.
[dependencies]
charm_lib = { package = "charm", path = "../../src-tauri" }
matrix-sdk = { version = "0.18.0", features = ["e2e-encryption", "sso-login"] }
matrix-sdk-ui = "0.18.0"
tokio = { version = "1.52.3", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
  "signal",
  "fs",
] }
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.10.2"
lru = "0.12"
futures-util = "0.3.32"
mime = "0.3"
mime_guess = "2"
image = "0.25"
aes-gcm = "0.10"
base64 = "0.22"
eyeball = "0.8.8"
sha2 = "0.11.0"
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
reqwest = { version = "0.13", features = ["json", "cookies"] }
# Pinned to match the version axum/tungstenite already pull in transitively
# (see Cargo.lock) so the dev-only WebSocket test client doesn't drag in a
# second, differently-versioned copy of tokio-tungstenite.
tokio-tungstenite = "0.29"
